The following changes have been done: - Test HTML files have been moved into a separate folder - Java TopJsLibraries implementation has been slightly modified to create the executor service inside of the constructor - Kotlin tests have been added - Kotlin implementation has been modified to use Ktor client instead of standard Java HTTP client